# odesi_scrapper

./: .gitignore  README.md  example_usage.py  pyproject.toml
src/: odesi_scraper.py
