[project]
name = "odesi-browse"
version = "0.1.0"
description = ""
authors = [
    {name = "Guinsly Mond",email = "guinslym@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[tool.poetry]
packages = [{include = "odesi_browse", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
